@@ -335,7 +335,7 @@
 						 <mx:DataGridColumn  editable="false" headerText="Status in Workflow" width="120" dataField="@workflowStatus"/>
 				         <mx:DataGridColumn  width="70" id="flowCellNumberCol" headerText="Flow Cell #"  editable="false" dataField="@flowCellNumber"/> 						             						             
 				         <mx:DataGridColumn   width="55" id="flowCellChannelNumber" headerText="Channel"  editable="false" dataField="@flowCellChannelNumber"/>
-				         <mx:DataGridColumn width="80"  editable="{currentState == 'LanesAdminState'}" headerText="# Cycles (actual)" dataField="@numberSequencingCyclesActual"> 						             						             
+				         <mx:DataGridColumn width="80"  editable="false" headerText="# Cycles (actual)" dataField="@numberSequencingCyclesActual"> 						             						             
 						   <mx:headerRenderer > 
 						    <mx:Component>
 						    	<mx:VBox verticalGap="0"   horizontalAlign="center" verticalAlign="middle">
@@ -345,17 +345,28 @@
 						    </mx:Component>
 						   </mx:headerRenderer>
 					     </mx:DataGridColumn>
-				         <mx:DataGridColumn width="80"  editable="{currentState == 'LanesAdminState'}" headerText="Clusters per Tile" dataField="@clustersPerTile"> 						             						             
+				         <mx:DataGridColumn width="80"  editable="false" headerText="Read 1 Clusters PF (M)" dataField="@read1ClustersPassedFilterM"> 						             						             
 						   <mx:headerRenderer > 
 						    <mx:Component>
-						    	<mx:VBox verticalGap="0"   horizontalAlign="center" verticalAlign="middle">
-							        <mx:Label text="Clusters per"/>
-							        <mx:Label text="Tile"/>
+						    	<mx:VBox verticalGap="0"   horizontalScrollPolicy="off" horizontalAlign="center" verticalAlign="middle">
+							        <mx:Label text="Read 1 Clusters"/>
+							        <mx:Label text="PF (M)"/>
 				    			</mx:VBox>
 						    </mx:Component>
 						   </mx:headerRenderer>
 					     </mx:DataGridColumn>
-				         <mx:DataGridColumn width="80"  editable="{currentState == 'LanesAdminState'}" headerText="File name" dataField="@fileName"/> 						             						             
+						<mx:DataGridColumn width="80"  editable="false" headerText="Read 2 Clusters PF (M)" dataField="@read2ClustersPassedFilterM"> 						             						             
+							<mx:headerRenderer > 
+								<mx:Component>
+									<mx:VBox verticalGap="0" horizontalScrollPolicy="off" horizontalAlign="center" verticalAlign="middle">
+										<mx:Label text="Read 2 Clusters"/>
+										<mx:Label text="PF (M)"/>
+									</mx:VBox>
+								</mx:Component>
+							</mx:headerRenderer>
+						 </mx:DataGridColumn>
+						 <mx:DataGridColumn width="80"  editable="false" headerText="Q30 (Gb)" dataField="@q30Gb"/> 						             						             
+				         <mx:DataGridColumn width="80"  editable="false" headerText="File name" dataField="@fileName"/> 						             						             
 					     <mx:DataGridColumn headerText="Last Cycle Status" width="80" dataField="@lastCycleStatus"
 	                          editorDataField="value" sortable="false" editable="{currentState == 'LanesAdminState'}" rendererIsEditor="false"   
 	                          itemRenderer="mx.controls.Label" 
